# fairproj

./: .gitignore  README.md  pyproject.toml
src/fairproj/: bases.py  protocols.py  utils.py
tests/: cutandchoose.py  dubins_spanier.py  even_paz.py  last_diminisher.py  selfridge_conway.py  steinhaus.py  stromquist.py
