[project]
name = "fairproj"
version = "0.1.0"
description = ""
authors = [
    {name = "dreadpirateroberts",email = "arshiyavardi2003@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mypy (>=2.1.0,<3.0.0)"
]

[tool.poetry]
packages = [{include = "fairproj", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
